--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
         </provider>
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.patrick.lrcreader.exo.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/Theme.LrcReader">
             <intent-filter>
